docs: s/assistant/agent/g
revert local assistants

--- a/docs/customization/models.mdx
+++ b/docs/customization/models.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Model Blocks"
-description: "These blocks form the foundation of the entire assistant experience, offering different specialized capabilities:"
+description: "These blocks form the foundation of the entire agent experience, offering different specialized capabilities:"
 ---
 
 - **[Chat](/customize/model-roles/chat)**: Power conversational interactions about code and provide detailed guidance
