--- a/docs/customize/deep-dives/rules.mdx
+++ b/docs/customize/deep-dives/rules.mdx
@@ -52,7 +52,7 @@ For example, you can say "Create a rule for this", and a rule will be created fo
 
 </Info>
 
-Rules can also be added to an Assistant on the Continue Hub.
+Rules can also be added to an Agent on the Continue Hub.
 
 Explore available rules [here](https://hub.continue.dev), or [create your own](https://hub.continue.dev/new?type=block&blockType=rules) in the Hub.
 
