--- a/docs/features/autocomplete/model-setup.mdx
+++ b/docs/features/autocomplete/model-setup.mdx
@@ -11,9 +11,9 @@ This model is specifically designed for code completion and offers excellent per
 **Codestral Quick Setup:**
 
 1. Get your API key from [Mistral AI](https://console.mistral.ai)
-2. Add [Codestral](https://hub.continue.dev/mistral/codestral) to your assistant on Continue Hub
+2. Add [Codestral](https://hub.continue.dev/mistral/codestral) to your agent on Continue Hub
 3. Add `MISTRAL_API_KEY` as a [User Secret](https://docs.continue.dev/hub/secrets/secret-types#user-secrets) on Continue Hub [here](https://hub.continue.dev/settings/secrets)
-4. Click `Reload config` in the assistant selector in the Continue IDE extension
+4. Click `Reload config` in the agent selector in the Continue IDE extension
 
 ### Hosted (Best Speed/Quality Tradeoff)
 
@@ -24,9 +24,9 @@ This model is specifically designed for code completion and is particularly fast
 **Mercury Coder Small Quick Setup:**
 
 1. Get your API key from [Inception Labs](https://platform.inceptionlabs.ai/)
-2. Add [Mercury Coder Small](https://hub.continue.dev/inceptionlabs/mercury-coder-small) to your assistant on Continue Hub
+2. Add [Mercury Coder Small](https://hub.continue.dev/inceptionlabs/mercury-coder-small) to your agent on Continue Hub
 3. Add `INCEPTION_API_KEY` as a [User Secret](https://docs.continue.dev/hub/secrets/secret-types#user-secrets) on Continue Hub [here](https://hub.continue.dev/settings/secrets)
-4. Click `Reload config` in the assistant selector in the Continue IDE extension
+4. Click `Reload config` in the agent selector in the Continue IDE extension
 
 ### Local (Offline / Privacy First)
 
@@ -37,8 +37,8 @@ This model provides good suggestions while keeping your code completely private.
 **Quick Setup:**
 
 1. Install [Ollama](https://ollama.ai/)
-2. Add [Qwen 2.5 Coder 1.5B](https://hub.continue.dev/ollama/qwen2.5-coder-1.5b) to your assistant on Continue Hub
-3. Click `Reload config` in the assistant selector in the Continue IDE extension
+2. Add [Qwen 2.5 Coder 1.5B](https://hub.continue.dev/ollama/qwen2.5-coder-1.5b) to your agent on Continue Hub
+3. Click `Reload config` in the agent selector in the Continue IDE extension
 
 ## Need Help?
 
