--- a/docs/hub/sharing.mdx
+++ b/docs/hub/sharing.mdx
@@ -11,21 +11,21 @@ Join thousands of developers using Continue. Share experiences, get help, and co
 
 ## Publishing
 
-Share your custom assistants, blocks, and configurations with the Continue community.
+Share your custom agents, blocks, and configurations with the Continue community.
 
 [Visit the Hub →](https://hub.continue.dev)
 
-## Browse Assistants
+## Browse Agents
 
-Explore assistants created by the community for specific use cases and workflows.
+Explore agents created by the community for specific use cases and workflows.
 
-[Browse Assistants →](https://hub.continue.dev)
+[Browse Agents →](https://hub.continue.dev)
 
-## Using Assistants
+## Using Agents
 
-Learn how to discover, install, and use community-created assistants in your projects.
+Learn how to discover, install, and use community-created agents in your projects.
 
-[Learn About Assistants →](/hub/assistants/intro)
+[Learn About Agents →](/hub/assistants/intro)
 
 ---
 
