--- a/docs/customization/overview.mdx
+++ b/docs/customization/overview.mdx
@@ -9,13 +9,13 @@ description: "Continue can be deeply customized. For example you might:"
 - **Create a Slash Command**. Slash commands allow you to easily add custom functionality to Continue. You can use a slash command that allows you to generate a shell command from natural language, or perhaps generate a commit message, or create your own custom command to do whatever you want. Learn more about [slash commands](/customize/deep-dives/slash-commands).
 - **Call external tools and functions**. Unchain your LLM with the power of tools using [Agent](/features/agent/quick-start). Add custom tools using [MCP Servers](/customization/mcp-tools)
 
-Whatever you choose, you'll probably start by editing your Assistant.
+Whatever you choose, you'll probably start by editing your Agent.
 
-## Editing your assistant
+## Editing your agent
 
-You can easily access your assistant configuration from the Continue Chat sidebar. Open the sidebar by pressing `cmd/ctrl` + `L` (VS Code) or `cmd/ctrl` + `J` (JetBrains) and click the Assistant selector above the main chat input. Then, you can hover over an assistant and click the `new window` (hub assistants) or `gear` (local assistants) icon.
+You can easily access your agent configuration from the Continue Chat sidebar. Open the sidebar by pressing `cmd/ctrl` + `L` (VS Code) or `cmd/ctrl` + `J` (JetBrains) and click the Agent selector above the main chat input. Then, you can hover over an agent and click the `new window` (hub agents) or `gear` (local assistants) icon.
 
-![configure an assistant](/images/customization/images/configure-continue-a5c8c79f3304c08353f3fc727aa5da7e.png)
+![configure an agent](/images/customization/images/configure-continue-a5c8c79f3304c08353f3fc727aa5da7e.png)
 
-- See [Editing Hub Assistants](/hub/assistants/edit-an-assistant) for more details on managing your hub assistant
+- See [Editing Hub Agents](/hub/assistants/edit-an-agent) for more details on managing your hub agent
 - See the [Config Deep Dive](/reference) for more details on configuring local assistants.
