--- a/docs/customize/deep-dives/configuration.mdx
+++ b/docs/customize/deep-dives/configuration.mdx
@@ -1,16 +1,16 @@
 ---
 title: "Configuration"
-description: Learn how to access and manage Continue assistant configurations through Hub or local YAML files
+description: Learn how to access and manage Continue agent configurations through Hub or local YAML files
 keywords: [config, settings, customize]
 ---
 
-You can easily access your assistant configuration from the Continue Chat sidebar. Open the sidebar by pressing <kbd>cmd/ctrl</kbd> + <kbd>L</kbd> (VS Code) or <kbd>cmd/ctrl</kbd> + <kbd>J</kbd> (JetBrains) and click the Assistant selector above the main chat input. Then, you can hover over an assistant and click the `new window` (hub assistants) or `gear` (local assistants) icon.
+You can easily access your agent configuration from the Continue Chat sidebar. Open the sidebar by pressing <kbd>cmd/ctrl</kbd> + <kbd>L</kbd> (VS Code) or <kbd>cmd/ctrl</kbd> + <kbd>J</kbd> (JetBrains) and click the Agent selector above the main chat input. Then, you can hover over an agent and click the `new window` (hub agents) or `gear` (local assistants) icon.
 
-![configure an assistant](/images/configure-continue.png)
+![configure an agent](/images/configure-continue.png)
 
-## Hub Assistants
+## Hub Agents
 
-Hub Assistants can be managed in [the Hub](https://hub.continue.dev). See [Editing an Assistant](../../hub/assistants/edit-an-assistant.md)
+Hub Agents can be managed in [the Hub](https://hub.continue.dev). See [Editing an Agent](../../hub/assistants/edit-an-agent.md)
 
 ## YAML Config
 
@@ -19,7 +19,7 @@ Local user-level configuration is stored and can be edited in your home director
 - `~/.continue/config.yaml` (MacOS / Linux)
 - `%USERPROFILE%\.continue\config.yaml` (Windows)
 
-To open this `config.yaml`, you need to open the assistants dropdown in the top-right portion of the chat input. On that dropdown beside the "Local Assistant" option, select the cog icon. It will open the local `config.yaml`.
+To open this `config.yaml`, you need to open the agents dropdown in the top-right portion of the chat input. On that dropdown beside the "Local Assistant" option, select the cog icon. It will open the local `config.yaml`.
 
 ![local-config-open-steps](/images/local-config-open-steps.png)
 
