--- a/docs/customize/deep-dives/slash-commands.mdx
+++ b/docs/customize/deep-dives/slash-commands.mdx
@@ -13,9 +13,9 @@ Slash commands can be combined with additional instructions, including [context 
 
 ## Prompts
 
-### Assistant prompt blocks
+### Agent prompt blocks
 
-The easiest way to add a slash command is by adding [`prompt` blocks](../../hub/blocks/block-types#prompts) to your assistant, which show up as slash commands in [Chat](../../features/chat/how-it-works.mdx).
+The easiest way to add a slash command is by adding [`prompt` blocks](../../hub/blocks/block-types#prompts) to your agent, which show up as slash commands in [Chat](../../features/chat/how-it-works.mdx).
 
 ### Prompt files
 
