--- a/docs/features/agent/how-to-customize.mdx
+++ b/docs/features/agent/how-to-customize.mdx
@@ -1,6 +1,6 @@
 ## Add Rules Blocks
 
-Adding Rules can be done in your assistant locally or in the Hub. You can explore Rules on the Continue Hub and refer to the [Rules deep dive](/customize/deep-dives/rules) for more details.
+Adding Rules can be done in your agent locally or in the Hub. You can explore Rules on the Continue Hub and refer to the [Rules deep dive](/customize/deep-dives/rules) for more details.
 
 ## Customize System Messages
 
@@ -12,14 +12,14 @@ models:
     provider: openai
     model: gpt-4o
     chatOptions:
-      baseSystemMessage: "You are a helpful coding assistant."
-      baseAgentSystemMessage: "You are a systematic coding assistant. Break down problems methodically."
-      basePlanSystemMessage: "You are a planning assistant. Create clear, actionable steps."
+      baseSystemMessage: "You are a helpful coding agent."
+      baseAgentSystemMessage: "You are a systematic coding agent. Break down problems methodically."
+      basePlanSystemMessage: "You are a planning agent. Create clear, actionable steps."
 ```
 
 ## Add MCP Tools
 
-You can add MCP servers to your assistant to give Agent access to more tools. Explore [MCP Servers on the Hub](https://hub.continue.dev) and consult the [MCP guide](/customize/deep-dives/mcp) for more details.
+You can add MCP servers to your agent to give Agent access to more tools. Explore [MCP Servers on the Hub](https://hub.continue.dev) and consult the [MCP guide](/customize/deep-dives/mcp) for more details.
 
 ## Tool Policies
 
