--- a/docs/features/edit/how-to-customize.mdx
+++ b/docs/features/edit/how-to-customize.mdx
@@ -1,6 +1,6 @@
 ## Setting active Edit/Apply model
 
-You can configure particular models from your Assistant to be used for Edit and Apply requests.
+You can configure particular models from your Agent to be used for Edit and Apply requests.
 
 1. Click the 3 dots above the main input
 2. Click the cube icon to expand the "Models" section
