--- a/docs/getting-started/extensions.mdx
+++ b/docs/getting-started/extensions.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Understanding Assistants"
-description: "Continue offers two ways to configure your AI assistants"
+title: "Understanding Agents"
+description: "Continue offers two ways to configure your AI agents"
 ---
 
-This content has moved to our comprehensive guide: [Understanding Assistants: Hub vs Local Configuration](/guides/understanding-assistants)
+This content has moved to our comprehensive guide: [Understanding Agents: Hub vs Local Configuration](/guides/understanding-assistants)
