--- a/docs/hub/assistants/intro.mdx
+++ b/docs/hub/assistants/intro.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Introduction to Assistants"
-description: "Custom AI code assistants are configurations of building blocks that enable a coding experience tailored to your specific use cases."
+title: "Introduction to Agents"
+description: "Custom AI code agents are configurations of building blocks that enable a coding experience tailored to your specific use cases."
 ---
 
-`config.yaml` is a format for defining custom AI code assistants. An assistant has some top-level properties (e.g. `name`, `version`), but otherwise consists of composable lists of **blocks** such as `models` and `rules`, which are the atomic building blocks of an assistant.
+`config.yaml` is a format for defining custom AI code agents. An agent has some top-level properties (e.g. `name`, `version`), but otherwise consists of composable lists of **blocks** such as `models` and `rules`, which are the atomic building blocks of an agent.
 
-The `config.yaml` is parsed by the open-source Continue IDE extensions to create custom assistant experiences. When you log in to [hub.continue.dev](https://hub.continue.dev/), your assistants will automatically be synced with the IDE extensions.
+The `config.yaml` is parsed by the open-source Continue IDE extensions to create custom agent experiences. When you log in to [hub.continue.dev](https://hub.continue.dev/), your agents will automatically be synced with the IDE extensions.
