--- a/docs/hub/assistants/use-an-assistant.mdx
+++ b/docs/hub/assistants/use-an-assistant.mdx
@@ -1,14 +1,14 @@
 ---
-title: "Use an assistant"
-description: "To use an existing assistant, you can explore other assistants ."
+title: "Use an agent"
+description: "To use an existing agent, you can explore other agents ."
 ---
 
-Once you've found the assistant you want to use
+Once you've found the agent you want to use
 
-1. Click “Add Assistant” on its page
+1. Click “Add Agent” on its page
 2. Add any required inputs (e.g. secrets like API keys)
-3. Select “Save changes” in assistant sidebar on the right hand side
+3. Select “Save changes” in agent sidebar on the right hand side
 
-After this, you can then go to your IDE extension and begin using the assistant by selecting it from the assistant dropdown.
+After this, you can then go to your IDE extension and begin using the agent by selecting it from the agent dropdown.
 
-[Extension Assistant Selector](/images/assistant-extension-select-319492a06d6249e5389747687341dfdb.png)
+[Extension Agent Selector](/images/agent-extension-select-319492a06d6249e5389747687341dfdb.png)
