--- a/docs/hub/blocks/bundles.mdx
+++ b/docs/hub/blocks/bundles.mdx
@@ -1,16 +1,16 @@
 ---
 title: "Bundles"
-description: "Bundles are collections of blocks that are commonly used together. You can use them to add multiple building blocks to your custom AI code assistants at once. They are only a concept on , so they are not represented in ."
+description: "Bundles are collections of blocks that are commonly used together. You can use them to add multiple building blocks to your custom AI code agents at once. They are only a concept on , so they are not represented in ."
 ---
 
 ## Use a bundle
 
 Once you know which bundle you want to use, you’ll need to
 
-1. Make sure the correct assistant is in the sidebar
-2. Click “Add all blocks". This adds the individual blocks to your assistant.
+1. Make sure the correct agent is in the sidebar
+2. Click “Add all blocks". This adds the individual blocks to your agent.
 3. Add any required inputs (e.g. secrets) for each block.
-4. Select “Save changes” in assistant sidebar on the right hand side
+4. Select “Save changes” in agent sidebar on the right hand side
 
 After this, you can then go to your IDE extension using the "Open VS Code" or "Open Jetbrains" buttons and begin using the new blocks.
 
