--- a/docs/hub/blocks/use-a-block.mdx
+++ b/docs/hub/blocks/use-a-block.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Use a block"
-description: "Blocks can be used by adding them to assistants:"
+description: "Blocks can be used by adding them to agents:"
 ---
 
-- [Create an assistant](/hub/assistants/create-an-assistant)
-- [Edit an assistant](/hub/assistants/edit-an-assistant)
+- [Create an agent](/hub/assistants/create-an-agent)
+- [Edit an agent](/hub/assistants/edit-an-agent)
 
 Some blocks require inputs. If you are missing an input for a block, a notification icon will show up in the sidebar next to the block. Click the notification to select which secret to use for the block input:
 
