--- a/docs/hub/governance/org-permissions.mdx
+++ b/docs/hub/governance/org-permissions.mdx
@@ -3,8 +3,8 @@ title: "Organization Permissions"
 description: "Users can have the following roles within an organization:"
 ---
 
-1. Admins are users who can manage members, secrets, blocks, assistants, etc.
-2. Members are users who can use assistants, blocks, secrets, etc.
+1. Admins are users who can manage members, secrets, blocks, agents, etc.
+2. Members are users who can use agents, blocks, secrets, etc.
 
 **User permissions for each role depend on the pricing plan:**
 
