--- a/docs/hub/source-control.mdx
+++ b/docs/hub/source-control.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Source Control"
-description: "When managing your custom assistants within an organization, you might want to take advantage of your usual source control workflows. Continue makes this easy with a  that automatically syncs your YAML files with hub.continue.dev. We are also planning on adding automations for GitLab, BitBucket, Gitee, and others. If you are interested, please reach out to us on ."
+description: "When managing your custom agents within an organization, you might want to take advantage of your usual source control workflows. Continue makes this easy with a GitHub Action that automatically syncs your YAML files with hub.continue.dev. We are also planning on adding automations for GitLab, BitBucket, Gitee, and others. If you are interested, please reach out to us on [GitHub](https://github.com/continuedev/continue/discussions)."
 ---
 
 ## Quickstart
